force-app/main/default/objects/InvoiceLine__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>Initial Invoice Amount</inlineHelpText>
    <label>Amount</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>