force-app/main/default/objects/InvoiceLine__c/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <label>Discount Amount</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>