force-app/main/default/objects/InvoiceLine__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <formula>TotalAfterDiscount__c +  TaxAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>