force-app/main/default/objects/InvoiceLine__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>