force-app/main/default/objects/InvoiceLine__c/fields/TotalAfterDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalAfterDiscount__c</fullName>
    <formula>TotalAmount__c -  DiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total After Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>